--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App</title>
 </head>
-<body id="App">
-
-<nav class="navbar">
-    <span class="navbar-logo">
-        <img src="images/logo.png" alt="page logo"/>
-    </span>
-    <button class="navbar-button"><i class="icon ion-navicon"></i></button>
-    <span class="navbar-cart"><i class="icon ion-bag"></i></span>
-    <ul class="navbar-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Elements</a></li>
-        <li><a href="#">Pages</a></li>
-    </ul>
-</nav>
+<body>
+<div id="App">
+    <nav class="navbar">
+        <span class="navbar-logo">
+            <img src="images/logo.png" alt="page logo"/>
+        </span>
+        <span class="navbar-title">Top Designers</span>
+        <button class="navbar-button"><i class="icon ion-navicon"></i></button>
+        <span class="navbar-cart"><i class="icon ion-bag"></i></span>
+        <ul class="navbar-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Elements</a></li>
+            <li><a href="#">Pages</a></li>
+        </ul>
+    </nav>
+</div>
+</body>
+</html>
+<!--
 <section class="header"></section>
 <section class="offer">
     <div class="side-element">
@@ -215,6 +220,5 @@
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
-</footer>
-</body>
-</html>
+</footer>-->
+
