--- a/src/index.html
+++ b/src/index.html
@@ -7,37 +7,9 @@
     <title>App</title>
 </head>
 <body>
-    <div id="App" class="application">
-    </div>
-    <div class="application">
-        <div class="basket-full">
-            <h3 class="basket-title">Basket</h3>
-            <div class="item-title">
-                <span class="title left">Item</span>
-                <span class="title right">Price</span>
-            </div>
-            <div class="items-list">
-                <div class="item">
-                    <img class="item-image" src="images/items/9.png" alt="xxx">
-                    <div class="item-detail">
-                        <h4 class="item-name">Lorem ipsum</h4>
-                        <div class="items-actions">
-                            <input type="text" value="5">
-                            <button><i class="icon ion-ios-cart"></i>X</button>
-                            <button><i class="icon ion-ios-cart"></i>X</button>
-                            <button><i class="icon ion-ios-trash"></i>z</button>
-                        </div>
-                    </div>
-                    <div class="item-price">450</div>
-                </div>
-            </div>
-            <div class="basket-total">
-                <span></span>
-                <button><i class="icon ion-ios-arrow-dropup "></i><i class="icon ion-ios-cart"></i>Checkout</button>
-            </div>
-        </div>
-    </div>
+    <div id="App" class="application"></div>
 </body>
 </html>
-<!---->
+<!--
+-->
 
