--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,45 @@
     <title>App</title>
 </head>
 <body>
-    <div id="App" class="application"></div>
+    <div id="App" class="application">
+        <div class="about-component">
+            <h3 class="component-title">About us</h3>
+        </div>
+        <div class="info-component">
+            <h3 class="component-title">Info</h3>
+        </div>
+        <div class="deals-component">
+            <h3 class="component-title">Deals</h3>
+        </div>
+    </div>
 </body>
 </html>
 <!--
+    <div class="application">
+        <div class="item-display">
+            <h3 class="item-title">Item details</h3>
+            <div class="image-container">
+                <img class="item-image" src="images/items/9.png" alt="xxx" />
+            </div>
+            <div class="item-detail">
+                <h4 class="detail item-name">Lorem ipsum</h4>
+                <span class="detail item-brand"><span class="title">Brand:</span>AKME Inc.</span>
+                <div class="detail item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet aspernatur blanditiis, cumque delectus deserunt dignissimos dolor
+                    eaque et expedita hic illum iste, minus nam omnis quasi saepe tempora ullam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci, amet consequuntur debitis deserunt dignissimos
+                    dolorem ipsum
+                    laudantium magnam numquam omnis quidem quis sequi, similique tempora ut velit! Error, ipsa.
+                </div>
+                <span class="detail item-size"><span class="title">Item size:</span>small</span>
+                <div class="detail item-color"><span class="title">Available color:</span><span class="color"></span></div>
+                <div class="detail item-category"><span class="title">Category:</span><span>Lamps</span></div>
+                <div class=" detail item-tags"><span class="title">Tags:</span><span>Lamps</span>,<span>Accessories</span></div>
+                <div class="row">
+                    <span class="item-price">57.12</span>
+                    <button class="item-add-to-basket"><i class="icon ion-bag"></i>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+    </div>
 -->
 
