--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,143 @@
     <title>App</title>
 </head>
 <body>
-    <div id="App" class="application">
-        <div class="about-component">
-            <h3 class="component-title">About us</h3>
-        </div>
-        <div class="info-component">
-            <h3 class="component-title">Info</h3>
-        </div>
-        <div class="deals-component">
-            <h3 class="component-title">Deals</h3>
-        </div>
+<div id="App" class="application">
+</div>
+<div class="application">
+    <div class="about-component">
+        <h3 class="component-title">About us</h3>
+        <section class="txt-section">
+            <img src="images/about/bizmeeting.jpg" alt="biz"/>
+            <div class="description">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
+                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
+                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
+                </p>
+                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
+                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
+                    sed suscipit velit voluptatem.
+                </p>
+                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
+                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
+                    nisi quibusdam sit veniam?
+                </p>
+                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
+                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
+                    suscipit voluptatem.
+                </p>
+                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
+                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
+                    dignissimos dolores explicabo minima vel voluptate!
+                </p>
+                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
+                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
+                    voluptatibus! Explicabo, totam.
+                </p>
+            </div>
+        </section>
+
+        <section class="txt-section">
+            <img src="images/about/bizmeeting.jpg" alt="biz"/>
+            <div class="description">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
+                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
+                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
+                </p>
+                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
+                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
+                    sed suscipit velit voluptatem.
+                </p>
+                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
+                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
+                    nisi quibusdam sit veniam?
+                </p>
+                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
+                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
+                    suscipit voluptatem.
+                </p>
+                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
+                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
+                    dignissimos dolores explicabo minima vel voluptate!
+                </p>
+                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
+                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
+                    voluptatibus! Explicabo, totam.
+                </p>
+            </div>
+        </section>
+
+        <section class="txt-section">
+            <img src="images/about/bizmeeting.jpg" alt="biz"/>
+            <div class="description">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
+                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
+                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
+                </p>
+                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
+                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
+                    sed suscipit velit voluptatem.
+                </p>
+                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
+                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
+                    nisi quibusdam sit veniam?
+                </p>
+                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
+                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
+                    suscipit voluptatem.
+                </p>
+                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
+                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
+                    dignissimos dolores explicabo minima vel voluptate!
+                </p>
+                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
+                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
+                    voluptatibus! Explicabo, totam.
+                </p>
+            </div>
+        </section>
+
+        <section class="txt-section">
+            <img src="images/about/bizmeeting.jpg" alt="biz"/>
+            <div class="description">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
+                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
+                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
+                </p>
+                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
+                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
+                    sed suscipit velit voluptatem.
+                </p>
+                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
+                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
+                    nisi quibusdam sit veniam?
+                </p>
+                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
+                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
+                    suscipit voluptatem.
+                </p>
+                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
+                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
+                    dignissimos dolores explicabo minima vel voluptate!
+                </p>
+                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
+                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
+                    voluptatibus! Explicabo, totam.
+                </p>
+            </div>
+        </section>
+
     </div>
+    <div class="info-component">
+        <h3 class="component-title">Info</h3>
+    </div>
+    <div class="deals-component">
+        <h3 class="component-title">Deals</h3>
+    </div>
+</div>
 </body>
 </html>
 <!--
