--- a/src/index.html
+++ b/src/index.html
@@ -9,169 +9,14 @@
 <body>
 <div id="App" class="application">
 </div>
-<div class="application">
-    <div class="about-component">
-        <h3 class="component-title">About us</h3>
-        <section class="txt-section">
-            <img src="images/about/bizmeeting.jpg" alt="biz"/>
-            <div class="description">
-                <h4>Lorem ipsum</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
-                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
-                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
-                </p>
-                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
-                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
-                    sed suscipit velit voluptatem.
-                </p>
-                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
-                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
-                    nisi quibusdam sit veniam?
-                </p>
-                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
-                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
-                    suscipit voluptatem.
-                </p>
-                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
-                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
-                    dignissimos dolores explicabo minima vel voluptate!
-                </p>
-                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
-                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
-                    voluptatibus! Explicabo, totam.
-                </p>
-            </div>
-        </section>
-
-        <section class="txt-section">
-            <img src="images/about/bizmeeting.jpg" alt="biz"/>
-            <div class="description">
-                <h4>Lorem ipsum</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
-                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
-                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
-                </p>
-                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
-                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
-                    sed suscipit velit voluptatem.
-                </p>
-                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
-                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
-                    nisi quibusdam sit veniam?
-                </p>
-                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
-                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
-                    suscipit voluptatem.
-                </p>
-                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
-                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
-                    dignissimos dolores explicabo minima vel voluptate!
-                </p>
-                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
-                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
-                    voluptatibus! Explicabo, totam.
-                </p>
-            </div>
-        </section>
-
-        <section class="txt-section">
-            <img src="images/about/bizmeeting.jpg" alt="biz"/>
-            <div class="description">
-                <h4>Lorem ipsum</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
-                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
-                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
-                </p>
-                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
-                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
-                    sed suscipit velit voluptatem.
-                </p>
-                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
-                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
-                    nisi quibusdam sit veniam?
-                </p>
-                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
-                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
-                    suscipit voluptatem.
-                </p>
-                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
-                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
-                    dignissimos dolores explicabo minima vel voluptate!
-                </p>
-                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
-                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
-                    voluptatibus! Explicabo, totam.
-                </p>
-            </div>
-        </section>
-
-        <section class="txt-section">
-            <img src="images/about/bizmeeting.jpg" alt="biz"/>
-            <div class="description">
-                <h4>Lorem ipsum</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate dignissimos esse laudantium
-                    quaerat voluptatum. Aliquid atque cum cumque, dolorem doloribus molestias necessitatibus
-                    perspiciatis quas quidem reiciendis repudiandae rerum sit.
-                </p>
-                <p>Aut ipsa iure quia quis? Ad alias assumenda deleniti, dolore, exercitationem expedita, illo iure
-                    iusto laborum libero mollitia nostrum perferendis quam quos reiciendis repellat repellendus saepe
-                    sed suscipit velit voluptatem.
-                </p>
-                <p>A adipisci animi assumenda atque dolorum exercitationem expedita fuga, labore, nemo perspiciatis
-                    quae recusandae repellendus saepe sed tempore vel voluptas. Ea, est facilis inventore neque nihil
-                    nisi quibusdam sit veniam?
-                </p>
-                <p>Accusamus alias asperiores commodi culpa cum deserunt, dolore ea earum enim exercitationem fuga,
-                    harum iste iusto minima modi mollitia non obcaecati odio possimus quas quasi rem repellat, sed
-                    suscipit voluptatem.
-                </p>
-                <p>Atque autem beatae deleniti earum eveniet expedita necessitatibus numquam porro repellat
-                    repudiandae? Fuga, molestiae, sed. Eveniet ex inventore iste quo tempore! Aliquam corporis cumque
-                    dignissimos dolores explicabo minima vel voluptate!
-                </p>
-                <p>Animi at commodi dolorum eius eos exercitationem fuga illo ipsam, iste libero magnam nam neque,
-                    nostrum praesentium provident quae repellat rerum saepe sapiente suscipit ullam unde veritatis
-                    voluptatibus! Explicabo, totam.
-                </p>
-            </div>
-        </section>
-
-    </div>
-    <div class="info-component">
+<!--<div class="application">
+    <div class="page info-component">
         <h3 class="component-title">Info</h3>
     </div>
-    <div class="deals-component">
+    <div class="page deals-component">
         <h3 class="component-title">Deals</h3>
     </div>
-</div>
+</div>-->
 </body>
 </html>
-<!--
-    <div class="application">
-        <div class="item-display">
-            <h3 class="item-title">Item details</h3>
-            <div class="image-container">
-                <img class="item-image" src="images/items/9.png" alt="xxx" />
-            </div>
-            <div class="item-detail">
-                <h4 class="detail item-name">Lorem ipsum</h4>
-                <span class="detail item-brand"><span class="title">Brand:</span>AKME Inc.</span>
-                <div class="detail item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet aspernatur blanditiis, cumque delectus deserunt dignissimos dolor
-                    eaque et expedita hic illum iste, minus nam omnis quasi saepe tempora ullam.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci, amet consequuntur debitis deserunt dignissimos
-                    dolorem ipsum
-                    laudantium magnam numquam omnis quidem quis sequi, similique tempora ut velit! Error, ipsa.
-                </div>
-                <span class="detail item-size"><span class="title">Item size:</span>small</span>
-                <div class="detail item-color"><span class="title">Available color:</span><span class="color"></span></div>
-                <div class="detail item-category"><span class="title">Category:</span><span>Lamps</span></div>
-                <div class=" detail item-tags"><span class="title">Tags:</span><span>Lamps</span>,<span>Accessories</span></div>
-                <div class="row">
-                    <span class="item-price">57.12</span>
-                    <button class="item-add-to-basket"><i class="icon ion-bag"></i>Add to Cart</button>
-                </div>
-            </div>
-        </div>
-    </div>
--->
 
